connected to kontent

--- a/web.config
+++ b/web.config
@@ -26,6 +26,15 @@
           <action type="Rewrite" url="server.js"/>
         </rule>
       </rules>
+           <rule name="Redirect to https" stopProcessing="true">
+                      <match url=".*" />
+                      <conditions>
+                          <add input="{HTTPS}" pattern="off" />
+                      </conditions>
+                      <action type="Redirect" url="https://difac.woodshowglobal.com/" appendQueryString="false" redirectType="Permanent" />
+                  </rule>
+    
+        </rules>
     </rewrite>
     
     <!-- 'bin' directory has no special meaning in node.js and apps can be placed in it -->
